tdf#153440: Fix font fallback for surrogate pairs in RTL text

When checking for a font that supports the surrogate pair, code was
appending code units one by one to string buffer and in RTL case this
was happening in reverse order leading to invalid text and consequently
failing to find any font that supports it.

We now iterate over runs not individual positions, so the text of each
individual run maintains its correct order regardless of the direction.

Change-Id: Icf2e2aed56512bf907dc6b3c36f387a9e3ad497a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152481
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 737854f3c5131d3a64803edc0802dbbc07aa4405)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152444
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>